--- a/.github/workflows/workspace-npm-publish.yml
+++ b/.github/workflows/workspace-npm-publish.yml
@@ -1,15 +1,11 @@
 name: (workspace) NPM Publish
 
 on:
-  release:
-    types: [created]
+  push: 
 
 jobs:
-  test:
-    uses: ./.github/workflows/workspace-check-formatting-and-run-tests.yml
 
   publish-npm:
-    needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -19,12 +15,6 @@ jobs:
           node-version: 18
           registry-url: https://registry.npmjs.org/
 
-      - name: Extract tag
-        id: get_tag
-        run: echo ::set-output name=TAG::${GITHUB_REF#refs/tags/}
-        env:
-          GITHUB_REF: ${{ github.ref }}
-
-      - run: ./scripts/publish.sh ${{ steps.get_tag.outputs.TAG }}
+      - run: ./scripts/publish.sh
         env:
           NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
