--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test:cov": "npm run test:cov --ws --if-present",
     "test:all": "npm run test:all --ws --if-present",
     "build": "npm run build --ws --if-present",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "lint": "eslint . && npm run check-types --ws",
+    "lint:fix": "eslint . --fix && npm run check-types --ws",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write .",
     "fmt": "npm run prettier:fix && npm run lint:fix",
@@ -20,6 +20,7 @@
     "@types/jest": "^29.5.5",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "bignumber.js": "^9.1.1",
+    "assemblyscript": "^0.27.22",
     "eslint": "^8.51.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-standard": "^17.0.0",
