--- a/package.json
+++ b/package.json
@@ -16,11 +16,9 @@
   },
   "devDependencies": {
     "@massalabs/eslint-config": "^0.0.9",
-    "@massalabs/prettier-config-as": "^0.0.2",
     "@types/jest": "^29.5.5",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "bignumber.js": "^9.1.1",
-    "assemblyscript": "^0.27.22",
     "eslint": "^8.51.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-standard": "^17.0.0",
@@ -45,6 +43,5 @@
   "bugs": {
     "url": "https://github.com/massalabs/massa-web3/issues"
   },
-  "homepage": "https://github.com/massalabs/massa-web3#readme",
-  "prettier": "@massalabs/prettier-config-as"
+  "homepage": "https://github.com/massalabs/massa-web3#readme"
 }
