--- a/packages/massa-web3/package.json
+++ b/packages/massa-web3/package.json
@@ -46,7 +46,7 @@
         "bundle.min.js"
     ],
     "dependencies": {
-        "@massalabs/wallet-provider": "^1.5.1",
+        "@massalabs/wallet-provider": "^1.5.3-dev",
         "@massalabs/web3-utils": "^1.4.7",
         "@noble/ed25519": "^1.7.3",
         "@noble/hashes": "^1.2.0",
