--- a/packages/massa-web3/package.json
+++ b/packages/massa-web3/package.json
@@ -47,7 +47,7 @@
     ],
     "dependencies": {
         "@massalabs/wallet-provider": "^1.5.3-dev",
-        "@massalabs/web3-utils": "^1.4.7",
+        "@massalabs/web3-utils": "^1.4.9-dev",
         "@noble/ed25519": "^1.7.3",
         "@noble/hashes": "^1.2.0",
         "@types/ws": "^8.5.4",
